--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.boqin.runtimepermissions">
 
     <!--危险权限-->
-    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
 
     <application android:allowBackup="true" android:icon="@mipmap/ic_launcher" android:label="@string/app_name" android:roundIcon="@mipmap/ic_launcher_round" android:supportsRtl="true" android:theme="@style/AppTheme">
         <activity android:name="com.boqin.runtimepermissions.MainActivity">
@@ -17,8 +18,6 @@
             <meta-data android:name="permission"
                 android:value="android.permission.RECORD_AUDIO"/>
         </activity>
-
-        <activity android:name="com.boqin.runtimepermissions.PermissionActivity"/>
 
     </application>
 
