--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,5 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
     testCompile 'junit:junit:4.12'
     annotationProcessor project(':compiler')
-    compile project(':permissionapi')
+    compile project(':runtime-permission')
 }
