--- a/simple/src/main/AndroidManifest.xml
+++ b/simple/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     <!--危险权限-->
     <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 
     <application android:allowBackup="true" android:icon="@mipmap/ic_launcher" android:label="@string/app_name" android:roundIcon="@mipmap/ic_launcher_round" android:supportsRtl="true" android:theme="@style/AppTheme">
         <activity android:name="com.boqin.runtimepermissions.MainActivity">
