1.规范命名 2.提交到maven仓库，创建1.0.0版本

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':simple', ':library', ':compiler', ':runtime-permission'
+include ':simple', ':permission-annotations', ':compiler', ':runtime-permission'
