--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,6 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-
     }
 }
 
@@ -17,7 +16,14 @@ allprojects {
     repositories {
         jcenter()
     }
+    dependencies {
+        repositories {
+//            maven { url "http://172.16.1.193:8081/repository/maven-central/" }
+            maven { url MAVEN_SNAPSHOT_IMAGE_URL }
+        }
+    }
 }
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
