--- a/compiler/build.gradle
+++ b/compiler/build.gradle
@@ -1,8 +1,9 @@
 apply plugin: 'java'
+apply from: 'maven_push.gradle'
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(path: ':library')
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile 'com.xinguangnet.permission:annotations:1.0.0-SNAPSHOT'
 }
 
 sourceCompatibility = "1.7"
