--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,28 @@ org.gradle.jvmargs=-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address
 
 JAVAPOET_VERSION=1.7.0
 
+# properties for maven2 repository
+# nexus服务器登陆时候的用户名/密码
+NEXUS_USERNAME=admin
+NEXUS_PASSWORD=admin123
+# 在POM文件中使用的group ID
+POM_GROUP_ID=com.xinguangnet.permission
+# POM文件中指向你网站的地址
+POM_URL=http://112.124.41.46/zhangfeng/runtimepermissions
+# SCM是指版本管理工具,一下说他的相关信息
+POM_SCM_URL=http://112.124.41.46
+POM_SCM_CONNECTION=http://112.124.41.46/zhangfeng
+POM_SCM_DEV_CONNECTION=http://112.124.41.46/zhangfeng
+# 你的开放协议相关信息
+POM_LICENCE_NAME= Apache License Version 2.0
+#POM_LICENCE_URL= https://github.com/achenglike/Gallery/blob/master/LICENSE
+POM_LICENCE_DIST=Apache License Version 2.0
+# 开发者的相关信息
+POM_DEVELOPER_ID=boqin
+POM_DEVELOPER_NAME=boqin
+
+# 要发布的版本好,snapshots 版本可以使用格式 1.0.0-SNAPSHOT
+VERSION_NAME=1.0.0-SNAPSHOT
+
+MAVEN_SNAPSHOT_IMAGE_URL = http://172.16.1.193:8081/repository/maven-snapshots/
+
