--- a/runtime-permission/build.gradle
+++ b/runtime-permission/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply from: 'maven_push.gradle'
 
 android {
     compileSdkVersion 25
@@ -26,7 +27,7 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:appcompat-v7:25.3.0'
     testCompile 'junit:junit:4.12'
-    compile project(':library')
+    compile 'com.xinguangnet.permission:annotations:1.0.0-SNAPSHOT'
 }
