--- a/simple/build.gradle
+++ b/simple/build.gradle
@@ -27,7 +27,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.+'
     compile 'com.android.support:design:25.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
+
     testCompile 'junit:junit:4.12'
-    annotationProcessor project(':compiler')
-    compile project(':runtime-permission')
+//    annotationProcessor 'com.xinguangnet.runtime-permissions:permissions-compiler:1.0.3-SNAPSHOT'
+    compile 'com.xinguangnet.permission:runtime-permissions:1.0.0-SNAPSHOT'
+    annotationProcessor 'com.xinguangnet.permission:compiler:1.0.0-SNAPSHOT'
 }
