1.添加未授权时取消功能

--- a/permission-annotations/build.gradle
+++ b/permission-annotations/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'java'
-apply from: 'maven_push.gradle'
+//apply from: 'maven_push.gradle'
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
