--- a/gradle.properties
+++ b/gradle.properties
@@ -42,7 +42,8 @@ POM_DEVELOPER_ID=boqin
 POM_DEVELOPER_NAME=boqin
 
 # 要发布的版本好,snapshots 版本可以使用格式 1.0.0-SNAPSHOT
-VERSION_NAME=1.0.1-SNAPSHOT
+# 1.0.2 增加小米个别权限的支持
+VERSION_NAME=1.0.2-SNAPSHOT
 
-MAVEN_SNAPSHOT_IMAGE_URL = http://172.16.1.193:8081/repository/maven-snapshots/
+MAVEN_SNAPSHOT_IMAGE_URL = http://172.16.2.73:8081/repository/maven-snapshots/
 
