1.更新版本到1.1.0，小米在权限被拒绝后再弹窗提示，优化其提示逻辑

--- a/gradle.properties
+++ b/gradle.properties
@@ -43,7 +43,8 @@ POM_DEVELOPER_NAME=boqin
 
 # 要发布的版本好,snapshots 版本可以使用格式 1.0.0-SNAPSHOT
 # 1.0.2 增加小米个别权限的支持
-VERSION_NAME=1.0.2-SNAPSHOT
+# 1.1.0 小米在权限被拒绝后再弹窗提示，优化其提示逻辑
+VERSION_NAME=1.1.0-SNAPSHOT
 
 MAVEN_SNAPSHOT_IMAGE_URL = http://172.16.2.73:8081/repository/maven-snapshots/
 
