--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+//apply from: 'http://112.124.41.46/yougoods-android/public-gradle/raw/release/1.0.0/gradlejob/guide/baseProjectGuide.gradle?private_token=TrToecy2cEgo_NYgTqus'
 
 buildscript {
     repositories {
