--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -29,6 +29,9 @@ dependencies {
     compile 'com.android.support:design:25.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
     testCompile 'junit:junit:4.12'
-    compile project(':runtime-permission')
+//    compile project(':runtime-permission')
+//    compile 'com.xinguangnet.permission:runtime-permissions:1.0.2-SNAPSHOT'
+    compile 'com.xinguangnet.permission:runtime-permissions:1.0.1-SNAPSHOT'
+//    annotationProcessor 'com.xinguangnet.permission:compiler:1.0.1-SNAPSHOT'
     annotationProcessor project(':compiler')
 }
