--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 //apply from: 'http://112.124.41.46/yougoods-android/public-gradle/raw/release/1.0.0/gradlejob/guide/baseProjectGuide.gradle?private_token=TrToecy2cEgo_NYgTqus'
+apply from: 'http://git.ops.com/XGN-Android/public-gradle/raw/release/1.0.1/gradlejob/guide/baseProjectGuide.gradle?private_token=y2DZ3xa-L8s61NqMCyx4'
 
 buildscript {
     repositories {
