--- a/runtime-permission/build.gradle
+++ b/runtime-permission/build.gradle
@@ -3,12 +3,11 @@ apply from: 'maven_push.gradle'
 //apply from: rootProject.ext.tp["baseApp"]
 
 android {
-    compileSdkVersion rootProject.ext.android.compileSdkVersion
-    buildToolsVersion rootProject.ext.android.buildToolsVersion
-
+    compileSdkVersion 26
+    buildToolsVersion "25.0.2"
     defaultConfig {
-        minSdkVersion rootProject.ext.android.minSdkVersion
-        targetSdkVersion rootProject.ext.android.targetSdkVersion
+        minSdkVersion 16
+        targetSdkVersion 26
         versionCode 2
         versionName "1.1"
 
@@ -28,7 +27,7 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.0'
+    compile 'com.android.support:appcompat-v7:26.0.0'
     testCompile 'junit:junit:4.12'
-    compile 'com.xinguangnet.permission:annotations:1.0.0-SNAPSHOT'
+    compile project(':permission-annotations')
 }
