--- a/compiler/build.gradle
+++ b/compiler/build.gradle
@@ -3,7 +3,8 @@ apply plugin: 'java'
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.xinguangnet.permission:annotations:1.0.0-SNAPSHOT'
+//    compile 'com.xinguangnet.permission:annotations:1.0.0-SNAPSHOT'
+    compile project(":permission-annotations")
 }
 
 sourceCompatibility = "1.7"
