--- a/gradle.properties
+++ b/gradle.properties
@@ -11,8 +11,7 @@
 # The setting is particularly useful for tweaking memory settings.
 #org.gradle.jvmargs=-Xmx1536m
 
-org.gradle.daemon=true
-org.gradle.jvmargs=-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005
+org.gradle.jvmargs=-Xmx1536m
 
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
@@ -22,28 +21,28 @@ org.gradle.jvmargs=-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address
 JAVAPOET_VERSION=1.7.0
 
 # properties for maven2 repository
-# nexus·þÎñÆ÷µÇÂ½Ê±ºòµÄÓÃ»§Ãû/ÃÜÂë
+# nexusï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Â½Ê±ï¿½ï¿½ï¿½ï¿½Ã»ï¿½ï¿½ï¿½/ï¿½ï¿½ï¿½ï¿½
 NEXUS_USERNAME=admin
 NEXUS_PASSWORD=admin123
-# ÔÚPOMÎÄ¼þÖÐÊ¹ÓÃµÄgroup ID
+# ï¿½ï¿½POMï¿½Ä¼ï¿½ï¿½ï¿½Ê¹ï¿½Ãµï¿½group ID
 POM_GROUP_ID=com.xinguangnet.permission
-# POMÎÄ¼þÖÐÖ¸ÏòÄãÍøÕ¾µÄµØÖ·
+# POMï¿½Ä¼ï¿½ï¿½ï¿½Ö¸ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Õ¾ï¿½Äµï¿½Ö·
 POM_URL=http://112.124.41.46/zhangfeng/runtimepermissions
-# SCMÊÇÖ¸°æ±¾¹ÜÀí¹¤¾ß,Ò»ÏÂËµËûµÄÏà¹ØÐÅÏ¢
+# SCMï¿½ï¿½Ö¸ï¿½æ±¾ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½,Ò»ï¿½ï¿½Ëµï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ï¢
 POM_SCM_URL=http://112.124.41.46
 POM_SCM_CONNECTION=http://112.124.41.46/zhangfeng
 POM_SCM_DEV_CONNECTION=http://112.124.41.46/zhangfeng
-# ÄãµÄ¿ª·ÅÐ­ÒéÏà¹ØÐÅÏ¢
+# ï¿½ï¿½Ä¿ï¿½ï¿½ï¿½Ð­ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ï¢
 POM_LICENCE_NAME= Apache License Version 2.0
 #POM_LICENCE_URL= https://github.com/achenglike/Gallery/blob/master/LICENSE
 POM_LICENCE_DIST=Apache License Version 2.0
-# ¿ª·¢ÕßµÄÏà¹ØÐÅÏ¢
+# ï¿½ï¿½ï¿½ï¿½ï¿½ßµï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ï¢
 POM_DEVELOPER_ID=boqin
 POM_DEVELOPER_NAME=boqin
 
-# Òª·¢²¼µÄ°æ±¾ºÃ,snapshots °æ±¾¿ÉÒÔÊ¹ÓÃ¸ñÊ½ 1.0.0-SNAPSHOT
-# 1.0.2 Ôö¼ÓÐ¡Ã×¸ö±ðÈ¨ÏÞµÄÖ§³Ö
-# 1.1.0 Ð¡Ã×ÔÚÈ¨ÏÞ±»¾Ü¾øºóÔÙµ¯´°ÌáÊ¾£¬ÓÅ»¯ÆäÌáÊ¾Âß¼­
+# Òªï¿½ï¿½ï¿½ï¿½ï¿½Ä°æ±¾ï¿½ï¿½,snapshots ï¿½æ±¾ï¿½ï¿½ï¿½ï¿½Ê¹ï¿½Ã¸ï¿½Ê½ 1.0.0-SNAPSHOT
+# 1.0.2 ï¿½ï¿½ï¿½ï¿½Ð¡ï¿½×¸ï¿½ï¿½ï¿½È¨ï¿½Þµï¿½Ö§ï¿½ï¿½
+# 1.1.0 Ð¡ï¿½ï¿½ï¿½ï¿½È¨ï¿½Þ±ï¿½ï¿½Ü¾ï¿½ï¿½ï¿½ï¿½Ùµï¿½ï¿½ï¿½ï¿½ï¿½Ê¾ï¿½ï¿½ï¿½Å»ï¿½ï¿½ï¿½ï¿½ï¿½Ê¾ï¿½ß¼ï¿½
 VERSION_NAME=1.2.0-SNAPSHOT
 
 MAVEN_SNAPSHOT_IMAGE_URL = http://172.16.2.73:8081/repository/maven-snapshots/
