--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 //apply from: 'http://112.124.41.46/yougoods-android/public-gradle/raw/release/1.0.0/gradlejob/guide/baseProjectGuide.gradle?private_token=TrToecy2cEgo_NYgTqus'
-apply from: 'http://git.ops.com/XGN-Android/public-gradle/raw/release/1.0.1/gradlejob/guide/baseProjectGuide.gradle?private_token=y2DZ3xa-L8s61NqMCyx4'
-
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.1'
+        classpath 'com.android.tools.build:gradle:3.0.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -17,16 +16,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
-    }
-    dependencies {
-        repositories {
-//            maven { url "http://172.16.1.193:8081/repository/maven-central/" }
-            maven { url MAVEN_SNAPSHOT_IMAGE_URL }
-        }
+        google()
     }
 }
 
-
-task clean(type: Delete) {
-    delete rootProject.buildDir
-}
