--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,12 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 26
     defaultConfig {
         applicationId "com.boqin.runtimepermission"
         minSdkVersion 15
-        targetSdkVersion 23
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -25,13 +24,13 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.+'
-    compile 'com.android.support:design:25.+'
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
+    compile 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.android.support:design:26.1.0'
+    compile 'com.android.support.constraint:constraint-layout:1.1.2'
     testCompile 'junit:junit:4.12'
-//    compile project(':runtime-permission')
+    compile project(':runtime-permission')
 //    compile 'com.xinguangnet.permission:runtime-permissions:1.0.2-SNAPSHOT'
-    compile 'com.xinguangnet.permission:runtime-permissions:1.0.1-SNAPSHOT'
+//    compile 'com.xinguangnet.permission:runtime-permissions:1.0.1-SNAPSHOT'
 //    annotationProcessor 'com.xinguangnet.permission:compiler:1.0.1-SNAPSHOT'
     annotationProcessor project(':compiler')
 }
