--- a/compiler/build.gradle
+++ b/compiler/build.gradle
@@ -4,6 +4,8 @@ apply plugin: 'java'
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile project(':permission-annotations')
+    compile "com.squareup:javapoet:$JAVAPOET_VERSION"
+
 
 }
 
