--- a/runtime-permission/build.gradle
+++ b/runtime-permission/build.gradle
@@ -1,7 +1,8 @@
 apply plugin: 'com.android.library'
-apply from: 'maven_push.gradle'
+//apply from: 'maven_push.gradle'
 //apply from: rootProject.ext.tp["baseApp"]
-
+apply plugin: 'com.github.dcendents.android-maven'
+group='com.github.booqin'
 android {
     compileSdkVersion 26
 
@@ -9,8 +10,8 @@ android {
     defaultConfig {
         minSdkVersion 16
         targetSdkVersion 26
-        versionCode 2
-        versionName "1.1"
+        versionCode 121
+        versionName "1.2.1"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
