java moduel add jitpack

--- a/compiler/build.gradle
+++ b/compiler/build.gradle
@@ -1,5 +1,8 @@
 apply plugin: 'java'
 //apply from: 'maven_push.gradle'
+apply plugin: 'maven'
+
+group = 'com.github.booqin'
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
